2005-07-13  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: gtksourceview has branched.

2005-07-12  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gnome-power-manager.

2005-07-11  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: metacity has branched.

2005-07-10  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added proposed group with the proposed
	modules from
	http://live.gnome.org/ReleasePlanning/TwoPointEleven/Desktop.

2005-07-06  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: gnome-terminal has branched for 2.10.

2005-07-06  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added ontv.

2005-07-03  Todd Kulesza  <todd@dropline.net>

	* translaction-status.xml: drivel has been branched.

2005-06-25  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gconf-editor has been branched.

2005-06-24  Abel Cheung  <maddog@linuxhall.org>

	* translation-status.xml: Move nautilus-media to HEAD, should have
	done that long time ago. c.f.
	http://mail.gnome.org/archives/release-team/2005-June/msg00084.html

2005-06-21  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: Remove gal from gnome-2.12 status pages.

2005-06-19  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gnome-app-install.

2005-06-19  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-icon-theme has been branched.

2005-06-17  Adam Weinberger  <adamw@gnome.org>

	* translation-status.xml: Remove rcd. It has no translatable strings, no
	  reference to gettext anywhere, and is just taking up space on the GTP
	  status pages. It can be re-added if the authors choose to add gettext
	  support later.

2005-06-17  Funda Wang  <fundawang@linux.net.cn>

	* translation-status: Meld 1.0 will be made from branch-0_9 instead of HEAD.

2005-06-10  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: gimp-tips has moved into po-tips.
