@@ -1311,15 +1311,6 @@
         <download/>
       </component>
     </version>
-    <version release="gnome-2.12">
-      <component name="gnome-mime-data" dir="gnome-mime-data" group="developer-libs">
-        <podir dir="po"/>
-        <potname name="gnome-mime-data.pot"/>
-        <branch name="HEAD"/>
-        <regenerate/>
-        <download/>
-      </component>
-    </version>
   </module>
   <module name="gnome-netstatus">
     <version release="gnome-2.10">
