@@ -1,5 +1,9 @@
 2005-07-13  Danilo Šegan  <danilo@gnome.org>
 
+	* translation-status.xml: Removed gnome-mime-data from 2.12.
+
+2005-07-13  Danilo Šegan  <danilo@gnome.org>
+
 	* translation-status.xml: gtksourceview has branched.
 
 2005-07-12  Christian Rose  <menthos@menthos.com>
